# currency_converter

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  logging.ini  pyproject.toml
src/: config.py  main.py
src/api/v1/: __init__.py  routers.py  servicies.py
src/schemas/: __init__.py  currency.py
src/utils/: __init__.py  currencies.py  exceptions.py
